<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C99C19">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="423dp"
        android:layout_height="455dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/SourceandDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/Source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#EC4D41"
            android:ems="10"
            android:hint="@string/Source"
            android:inputType="textPostalAddress"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/Destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#EC4D41"
            android:ems="10"
            android:hint="@string/Destination"
            android:inputType="textPostalAddress"
            android:selectAllOnFocus="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/DateandTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView">

        <EditText
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#EC4D41"
            android:ems="10"
            android:hint="@string/Date"
            android:inputType="date" />

        <EditText
            android:id="@+id/Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#EC4D41"
            android:ems="10"
            android:hint="@string/Time"
            android:inputType="time" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DateandTime">

        <EditText
            android:id="@+id/SeatsAvailable"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#EC4D41"
            android:ems="10"
            android:hint="@string/SeatsAvailable"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/OpenBookings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#EC4D41"
        android:padding="20dp"
        android:text="@string/Book"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>